"For each plug" plan.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8303 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -632,6 +632,12 @@ calculation of appropriate light.
 TODO: maybe make it a table? We can probably waste 0.5-1 page on this
 without a problem. Document this at the end, when everything is settled down.
 
+For each plug:
+- plug name
+- declaration (parameter order and types must match)
+- type (fragment or vertex)
+- docs: called when?
+
 \section{Complete example models}
 
 Examples are available inside our engine example models on
