Screenshot from shader_texture.x3dv.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8329 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -576,6 +576,12 @@ between various \texttt{X3DTextureNode} descendants is what the browser
 does automatically for you, that is what color is passed
 to the first \texttt{texture\_color} plug.
 
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=3in]{shader_texture_edge_detection}
+  \caption{ShaderTexture showing an edge detection operation on normal ImageTexture.}
+\end{figure}
+
 \subsubsection{No aliasing}
 
 The nice thing about the effects used on textures (both for \texttt{ShaderTexture}
