Fix demos to include "const in vec3 normal" param for texture_apply.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8358 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -272,7 +272,8 @@ effects Effect \{
     url "data:text/plain,
 
 \textbf{    void PLUG_texture_apply(}
-\textbf{      inout vec4 fragment_color)}
+\textbf{      inout vec4 fragment_color,}
+\textbf{      const in vec3 normal)}
 \textbf{    \{}
 \textbf{      fragment_color.rgb *= 2.0;}
 \textbf{    \}}"
